Fix flickering highlights

--- a/src/styles/setup/_colors.scss
+++ b/src/styles/setup/_colors.scss
@@ -1,7 +1,7 @@
 :root {
     --color-secondary: #1e202e;
     --color-secondary-light: #242633;
-    --drag-over-color:#1e202e;
+    --drag-over-color: #2a2d41;
     --color-input-background:rgb(54, 55, 73);
     --font-color: #bfc2ca;
     --color-primary: #006eff;
